src/yini_test/cases/golden/strict/valid/lists/nested-lists.strict.yini
@yini strict

^ Lists
matrix = [
    [1, 2],
    [3, 4]
]
groups = [["a", "b"], ["c"]]

/END
