src/yini_test/cases/golden/strict/invalid/concatenation/list-concatenation.strict.yini
@yini strict

^ Concat
items = ["a"] + ["b"]

/END
